[package]
name = "dylink_macro"
version = "0.1.1"
authors = ["Jonathan Thomason"]
edition = "2021"
readme = "readme.md"
license = "MIT"
keywords = ["ffi", "macro", "attribute"]
description = "Dynamic function loading attribute."

[lib]
proc-macro=true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"

[features]
warn_diag = []