[package]
name = "dylink_macro"
version = "0.5.0"
authors = ["Jonathan Thomason"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ffi", "macro", "attribute"]
description = "Dynamic function loading attribute."
repository = "https://github.com/Razordor/dylink_macro.git"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
warnings = []
no_lifetimes = []
